<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Vistas.AgregarProducto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:paddingEnd="10dp"
                android:theme="?attr/actionBarTheme"
                app:subtitle="Agregar Producto"
                app:subtitleTextColor="@android:color/white"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/white">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_guardar_producto"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:drawableStart="@drawable/ic_save"
                    android:layout_gravity="end"/>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:src="@drawable/ic_photo_size_select_actual"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/delete_img"
                    android:padding="5dp"
                    style="@style/ActivitiesTheme.ImageView"
                    android:src="@drawable/ic_close"/>

            </LinearLayout>

        </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_CodigoBarras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:startIconDrawable="@drawable/ic_barcode"
                app:helperText="@string/helper_campo_requerido"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCodigoBarras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Codigo de Barras"
                    android:inputType="number"
                    android:maxLength="14"/>
            </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_NombreProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/ic_producto"
            app:helperText="@string/helper_campo_requerido"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="12"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:hint="Categoria"
            app:startIconDrawable="@drawable/ic_categoria"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/etCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Precio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="50"
                app:startIconDrawable="@drawable/ic_money"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Precio"
                    android:inputType="numberDecimal"
                    android:nextFocusDown="@id/etExistencias"
                    android:maxLength="12"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_Existencias"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="50"
                app:startIconDrawable="@drawable/ic_producto"
                app:helperText="@string/helper_min"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExistencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Existencias"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_Descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Descripcion del producto"
                android:gravity="top|start"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>